--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-
-  "homepage":"https://advaithm26.github.io",
+  "homepage": "https://advaithm26.github.io",
   "name": "advaithm26.github.io",
   "version": "0.1.0",
   "private": true,
@@ -10,7 +9,6 @@
     "@testing-library/user-event": "^7.2.1",
     "@tippyjs/react": "^4.2.0",
     "css-litcss": "^1.7.0",
-    "gh-pages": "^3.1.0",
     "html-loader": "^1.3.2",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
@@ -27,7 +25,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
