--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@tippyjs/react": "^4.2.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.5",
+    "@types/react": "^16.9.54",
+    "@types/react-dom": "^16.9.9",
     "css-litcss": "^1.7.0",
     "html-loader": "^1.3.2",
     "jquery": "^3.5.1",
@@ -18,15 +22,15 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.0.7",
-    "react-jss": "^10.4.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
-    "react-scripts": "3.4.3"
+    "react-scripts": "4.0.0",
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "push":"git push origin master",
+    "push": "git push origin master",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
