--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@tippyjs/react": "^4.2.0",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.5",
-    "@types/react": "^16.9.54",
-    "@types/react-dom": "^16.9.9",
     "css-litcss": "^1.7.0",
     "html-loader": "^1.3.2",
     "jquery": "^3.5.1",
@@ -24,8 +20,7 @@
     "react-helmet-async": "^1.0.7",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
-    "react-scripts": "4.0.0",
-    "typescript": "^4.0.5"
+    "react-scripts": "4.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
