--- a/src/data/project-data.json
+++ b/src/data/project-data.json
@@ -172,7 +172,7 @@
   },
   {
     "name": "JobRecover",
-    "description": "A web app made for HackTJ 7.5 and designed to connect employers to the unemployed, during difficult times.",
+    "description": "A web app made for HackTJ 7.5 and designed to connect employers to the unemployed, during difficult times. Thanks to Sritan and Nithil for making this project possible.",
     "img": "jobRecover.jpg",
     "link": "https://realtechnerd.github.io/job-recover-client/",
     "date": "12/13/20",
