--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://advaithm26.github.io",
-  "name": "advaithm26.github.io",
+  "homepage": "https://advaithmalka.github.io",
+  "name": "advaithmalka.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
