--- a/src/data/project-data.json
+++ b/src/data/project-data.json
@@ -107,7 +107,7 @@
     "name": "Camera app",
     "description": "Take photos and download them in this simple to use camera app!",
     "img": "camera-app.jpg",
-    "link": "https://advaithm26.github.io/camera-app/",
+    "link": "https://advaithmalka.github.io/camera-app/",
     "date": "7/29/20",
     "badges": [
       "html",
@@ -146,7 +146,7 @@
     "name": "Chess AI",
     "description": "Play chess against an AI right in your browser!",
     "img": "chess-ai.jpg",
-    "link": "https://advaithm26.github.io/chess-ai/",
+    "link": "https://advaithmalka.github.io/chess-ai/",
     "date": "10/7/20",
     "badges": [
       "html",
@@ -158,7 +158,7 @@
     "name": "DevMedia",
     "description": "A social media app built for developers, by developers.",
     "img": "devmedia.png",
-    "link": "https://advaithm26.github.io/devmedia/",
+    "link": "https://advaithmalka.github.io/devmedia/",
     "date": "11/19/20",
     "badges": [
       "html",
@@ -190,7 +190,7 @@
     "name": "SuperChat",
     "description": "A realtime chat app built for the future.",
     "img": "superchat.png",
-    "link": "https://advaithm26.github.io/superchat/",
+    "link": "https://advaithmalka.github.io/superchat/",
     "date": "12/19/20",
     "badges": [
       "html",
