add tailwind css to skillset

--- a/package.json
+++ b/package.json
@@ -4,29 +4,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.0.0",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@tippyjs/react": "^4.2.0",
+    "autoprefixer": "^9.8.6",
+    "bootstrap": "^4.5.3",
     "css-litcss": "^1.7.0",
+    "highlight.js": "^10.5.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
+    "postcss": "^7.0.35",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-helmet-async": "^1.0.7",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "push": "git push origin master",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
