--- a/src/data/project-data.json
+++ b/src/data/project-data.json
@@ -207,7 +207,7 @@
     "name": "Lit Bot",
     "description": "The perfect multi-purpose Discord bot to enlighten your servers.",
     "img": "litbot.png",
-    "link": "https://realtechnerd.github.io/lit-bot/",
+    "link": "https://litty-bot.github.io/",
     "date": "3/11/21",
     "badges": [
       "node",
